--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   border: 1px solid #eee9de;
   padding: 2px 4px;
   transition: all 0.2s ease;
+  width: 50%;
 }
 .form-button {
   border: 1px solid white;
@@ -113,7 +114,7 @@ img {
 }
 .info-container {
   padding-bottom: 30px;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 .info-box {
   display: inline-block;
@@ -122,6 +123,9 @@ img {
 }
 .info-content {
   margin: 0 auto;
+}
+.info-content i {
+  margin-right: 10px;
 }
 .wi {
   margin: 2px 4px;
